# unum

./: .gitignore  Cargo.toml  README.md  release-plz.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: check.yml  release-plz.yml
crates/fg-t1k/: Cargo.toml
crates/fg-t1k-core/: Cargo.toml
crates/fg-t1k-core/src/: align_algo.rs  alignments.rs  bam_extract.rs  extract.rs  genotyper.rs  kmer.rs  kmer_count.rs  kmer_index.rs  lib.rs  overlap.rs  ref_kmer_filter.rs  variant_caller.rs
crates/fg-t1k-core/tests/: golden_align_algo.rs  golden_alignments.rs  golden_bam_extract.rs  golden_fastq_extract.rs  golden_genotype_e2e.rs  golden_genotyper_em.rs  golden_genotyper_model.rs  golden_get_overlaps.rs  golden_kmer.rs  golden_kmer_count.rs  golden_kmer_index.rs  golden_refkmerfilter.rs  refbuild_build.rs  refbuild_build_hla.rs  refbuild_dat.rs  refbuild_gene_coord.rs
crates/fg-t1k-sys/: Cargo.toml  build.rs
crates/fg-t1k-sys/shim/: shim.cpp  shim.h
crates/fg-t1k-sys/src/: lib.rs  oracle.rs
crates/fg-t1k-sys/tests/: diff_align_algo.rs  diff_alignments.rs  diff_analyze_e2e.rs  diff_bam_extract.rs  diff_fastq_extract.rs  diff_genotype_e2e.rs  diff_genotyper_em.rs  diff_genotyper_model.rs  diff_get_overlaps_from_read.rs  diff_kmer.rs  diff_kmercode.rs  diff_kmercount.rs  diff_kmerindex.rs  diff_refkmerfilter.rs  diff_variant_caller.rs  oracle_binaries.rs  shim_tables_match_vendor.rs
crates/fg-t1k/src/: cli.rs  engine.rs  main.rs
crates/fg-t1k/src/stages/: analyze.rs  build.rs  extract.rs  genotype.rs  mod.rs
crates/fg-t1k/tests/: build_e2e.rs  e2e_example.rs
crates/unum/: CHANGELOG.md  Cargo.toml
crates/unum-core/: CHANGELOG.md  Cargo.toml
crates/unum-core/src/: align_algo.rs  alignments.rs  allele_freq.rs  bam_extract.rs  combine.rs  copy_number.rs  extract.rs  fastq.rs  genotyper.rs  kmer.rs  kmer_count.rs  kmer_index.rs  lib.rs  overlap.rs  read_input.rs  ref_kmer_filter.rs  variant_caller.rs
crates/unum-core/src/refbuild/: dat.rs  drand48.rs  gene_coord.rs  mod.rs
crates/unum-core/tests/: golden_align_algo.rs  golden_alignments.rs  golden_bam_extract.rs  golden_bam_no_alignment.rs  golden_fastq_extract.rs  golden_genotype_e2e.rs  golden_genotyper_em.rs  golden_genotyper_model.rs  golden_get_overlaps.rs  golden_kmer.rs  golden_kmer_count.rs  golden_kmer_index.rs  golden_refkmerfilter.rs  refbuild_build.rs  refbuild_build_hla.rs  refbuild_dat.rs  refbuild_gene_coord.rs
crates/unum-core/tests/common/: mod.rs
crates/unum-core/tests/golden/: align_algo.txt  genotyper_em.txt  genotyper_model.txt  get_overlaps.txt  kmer.txt  kmer_count.txt  kmer_index.txt  refkmerfilter.txt
crates/unum-core/tests/golden/bam_extract/: paired_1.fq  paired_2.fq
crates/unum-core/tests/golden/fastq_extract/: example_paired_1.fq  example_paired_2.fq  mate2_longer_1.fq  mate2_longer_2.fq  synthetic_1.fq
crates/unum-core/tests/golden/genotype_e2e/: kir_example_allele.tsv
crates/unum/src/: cli.rs  main.rs
crates/unum/src/stages/: analyze.rs  build.rs  combine.rs  copy_number.rs  extract.rs  genotype.rs  mod.rs
crates/unum/tests/: bam_extract_e2e.rs  build_e2e.rs  emit_metrics.rs  extract_e2e.rs  genotype_e2e.rs
docs/: DIVERGENCES.md  KNOWN-DIVERGENCES.md
docs/design/: 2026-07-04-frequency-prior-and-identifiability-design.md
fixtures/example/: PINS.md  oracle_genotype.golden.tsv
fixtures/refbuild/: PINS.md  hla_genes.gtf  kir_genes.gtf
(+18 files in other folders)
