[workspace]
resolver = "2"
members = ["crates/unum", "crates/unum-core"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/fg-labs/unum"
homepage = "https://github.com/fg-labs/unum"
keywords = ["hla", "kir", "genotyping", "bioinformatics", "genomics"]

[profile.release]
lto = true
codegen-units = 1
