[package]
name = "fg-t1k-sys"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = []
t1k-sys = []

[dependencies]
hts-sys = "2.2"

[build-dependencies]
cc = "1"

[dev-dependencies]
anyhow = "1"
fg-t1k-core = { path = "../fg-t1k-core" }
rust-htslib = "0.49"
tempfile = "3"
