[package]
name = "fg-t1k"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
fg-t1k-core = { path = "../fg-t1k-core" }
fg-t1k-sys = { path = "../fg-t1k-sys", optional = true }

[features]
t1k-sys = ["dep:fg-t1k-sys", "fg-t1k-sys/t1k-sys"]

[dev-dependencies]
tempfile = "3"
