[package]
name = "unum-core"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core library for unum: a byte-identical Rust port of the T1K HLA/KIR genotyper (k-mer filtering, banded alignment, EM genotyping)."
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories = ["science"]

[dependencies]
anyhow = "1"
flate2 = { version = "1", default-features = false, features = ["zlib-ng"] }
niffler = { version = "3", default-features = false, features = ["gz"] }
radsort = "0.1"
rayon = "1"
rust-htslib = "1.0.1"
rustc-hash = "2"

[dev-dependencies]
tempfile = "3"
